--- a/files/coc-settings.json
+++ b/files/coc-settings.json
@@ -1,4 +1,18 @@
 {
+  "languageserver": {
+    "terraform": {
+      "command": "terraform-ls",
+      "args": ["serve"],
+      "filetypes": ["terraform", "tf"],
+      "initializationOptions": {},
+      "settings": {}
+    },
+    "dockerfile": {
+      "command": "docker-langserver",
+      "filetypes": ["dockerfile"],
+      "args": ["--stdio"]
+    }
+  },
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextPrefix": "# ",
   "diagnostic-languageserver.filetypes": {
@@ -9,24 +23,21 @@
     "eelixir": ["mix_credo"]
   },
   "cSpellExt.enableDictionaries": ["russian"],
-  "cSpell.enabledLanguageIds": [
-    "markdown",
-    "plaintext",
-    "yml"
-  ],
+  "cSpell.enabledLanguageIds": ["markdown", "plaintext", "yml", "php", "node", "python", "html", "css"],
   "cSpell.language": "en,ru",
   "prettier.printWidth": 120,
   "prettier.trailingComma": "all",
   "prettier.eslintIntegration": true,
   "prettier.stylelintIntegration": true,
   "prettier.singleQuote": true,
-
-  "solargraph.commandPath": "/home/recroot/.asdf/shims/solargraph",
+  "markdownlint.config": {
+    "line_length": false,
+    "first-line-h1": false
+  },
   "solargraph.diagnostics": true,
   "solargraph.autoformat": true,
   "solargraph.formatting": true,
   "solargraph.hover": true,
-
   "python.linting.flake8Enabled": true,
   "python.linting.banditEnabled": true,
   "python.linting.pytypeEnabled": true
