Lazyvim major upgrade

--- a/files/mcp/projects.yml
+++ b/files/mcp/projects.yml
@@ -1,3 +1,5 @@
 showmojo:
   project: "~/Projects/Core"
   docs: ~/Projects/showmojo-docs/docs/dev_docs/project_docs
+store:
+  project: "~/Projects/store-rails/"
